@@ -9,12 +9,6 @@ DIST sbcl-0.9.15-powerpc-darwin-binary.tar.bz2 6717123 RMD160 10c69501dbfc381b8d
 DIST sbcl-0.9.16-x86-darwin-binary.tar.bz2 7461289 RMD160 17289643aa3a1d0b9368f5c58d1642c2fd0115a0 SHA1 353f35a339ddac10cbd160999b0847684789e129 SHA256 c3353d1d4662e137774ab99d04870b62084564cf35bf2b4d17eb7d353a3297d7
 DIST sbcl-0.9.17-sparc-linux-binary.tar.bz2 7322996 RMD160 b9887c767ddc693fade88b04cc919859aef1b79a SHA1 45a01e64e8bbda991c0f252c344acf3c5f27ec69 SHA256 9238d9de88be3d05c3369cd15f52ae2819a82e7e55f9b85133c947d102ce4059
 DIST sbcl-1.0-powerpc-linux-binary.tar.bz2 6841127 RMD160 11cba4cec1efed9d9b322ab80d58ec63b93f66e4 SHA1 a95873859c529ac3e8013d64bc1a8ad345c1f6bc SHA256 912bdbee882907b5d4437fb9611637e31801db5303ddcd34f9514a386b0b995f
-DIST sbcl-1.0.12-mips-linux-binary.tar.bz2 7778180 RMD160 f44c4b90041fc73e380fe61d54f2cb78e0f30ad3 SHA1 8cb690396395a2cd2779f4518de07ffcb85ce5fa SHA256 2b3928adc6d837fc7fc3b634d707cab6d635a3e8dc6f6a7388a655ac7263f9ab
-DIST sbcl-1.0.12-mipsel-linux-binary.tar.bz2 7827012 RMD160 c99903449fffbbd58cbb6680f1f61d9ca54fb0f8 SHA1 384be91870b9073eab6aebd43f8bae1cb526f7e0 SHA256 08bd5c5bf23ef0ef6aa21dd7d73b2151c773d730965378d95327ef83cabe5a8d
-DIST sbcl-1.0.12-x86-64-linux-binary.tar.bz2 7914115 RMD160 6806dc677628eb423a51ddd2a517e3a9280f12dd SHA1 b8c83d456a49639ed9c5fcd0b8745cfc801ced78 SHA256 03fd47d5173b54b4aa747f8f688b98f235faabb00b9c2d3da97be45dedcee5aa
-DIST sbcl-1.0.12-x86-linux-binary.tar.bz2 8131767 RMD160 317139e46949a617dae539f609a6e807d6bdff32 SHA1 d6c1a656a999938cffa12604b681fc579ad0bfae SHA256 07413233d21039e44704c83c1bc911e1bf52ec4cf3ae7013cfa1cfb822d1cce2
-DIST sbcl-1.0.14-source.tar.bz2 3194555 RMD160 546663988c3dc01edd8afe276baf8b2db693e125 SHA1 e3fc5431fc65637857d23ef539ac8729530aaec7 SHA256 7acc55123811fb135448e4f8ccc98d66e6b9b55d5f4c823b6da4b7cd9b4aeba1
-DIST sbcl-1.0.15-source.tar.bz2 3205556 RMD160 58da6eb46cb72d0e88cdb5ed5a1bc01d5925cfa2 SHA1 4d3357f56e6f600cae0ac3f78111fccd5aeb7473 SHA256 5de498559a6be00019fd0ce090757e75c875d89e8547593d7a10afb6da970be9
 DIST sbcl-1.0.15-x86-64-linux-binary.tar.bz2 8002517 RMD160 38361effcf3b931656dfba8a0656ce4b2192f929 SHA1 685daee7b5e26cad5ef56bf9da28dbe6fabdfef8 SHA256 7b4e355be5f78c248a92e9b9973614b49cbd8ca6322f0bb09f1aad729c6b8912
 DIST sbcl-1.0.15-x86-linux-binary.tar.bz2 8274101 RMD160 288d5d18310c1282216995ea23549c7c0cfc814e SHA1 d976d17198b482017d8a278f4c684f5b99ee4df7 SHA256 92f224b21429457908ba24180ef73b18f7648e7b81ec147cfe3b6887b9c07d37
 DIST sbcl-1.0.17-mips-linux-binary.tar.bz2 8003933 RMD160 288376b4476369a6a18a8226f65346210c27102b SHA1 73b9a1a9718c4c699c5a249919c46d656338e44a SHA256 26a51f59908827f48cdaacbb2c10210f5a05832aa0a767dfd12f3975d23735f3
@@ -30,10 +24,9 @@ DIST sbcl-1.0.23-x86-linux-binary.tar.bz2 8330838 RMD160 93811e756b20d1e3234c9ef
 DIST sbcl-1.0.23-x86-solaris-binary.tar.gz 30901 RMD160 ef81f39111f392f71643cf4cf83d736cf980766d SHA1 1dfd965672b9b8ffa6bf55a30dd573e0fc744072 SHA256 420b7d82bfd6008077b8ed8f88c6b29f7456bc2f880367bb30c41fe8755e630d
 DIST sbcl-1.0.25-x86-64-linux-binary.tar.bz2 8207707 RMD160 8672331b76c9b9ec13f9466b9f3575eabea72b05 SHA1 e93a6c4abcc2d280cb3a031c3f14fee63d97fb9b SHA256 021b3865d8c882c0fc8cca7d6b3d2e169610cf2c5fa9419c7decc029170a3724
 DIST sbcl-1.0.26-source.tar.bz2 3299527 RMD160 71b6430403309a4668bd5a5efb88e5339d39b47b SHA1 b13b87b1ea076a56e916d0bced7c62dd675c1efe SHA256 94b258b61c4df509ee1f0ad7451b23b20597fd3f7f3e7cb5d28f3f05fa183b4d
-DIST sbcl-1.0.7-x86-darwin-binary.tar.bz2 7833780 RMD160 ef040903fcf28856022ecb5981375f89e61987f6 SHA1 7e4a68676046572c67894e962e2d18836d8586a8 SHA256 4437347e608c0c7a95aef87f358457f3a06de99a7ce665a05dfa4e159f3a32fb
-EBUILD sbcl-1.0.14.ebuild 7017 RMD160 90c26ae5b6f3759be8579d20f7fb1dd166a7e339 SHA1 4150de4a8105d3ecc7bf6ae2a8eca13d24e148d5 SHA256 3695c3fafb94b06de3e8c05c9ed238075c65700c0d0ffbb1c7824af5a08f75bd
-EBUILD sbcl-1.0.15.ebuild 7083 RMD160 6d03b2d07d1cd0e2c34bf4b86e4b11bfc324aea2 SHA1 93fac1366a67db539d234dd3041b27d21238ad4a SHA256 275a6feffded909437eba79c1bd83ccdba629ed60b2268773a009418dae1d8ac
+DIST sbcl-1.0.27-source.tar.bz2 3316031 RMD160 2a00600c02f41254029830ce4c083ff8820a2849 SHA1 4637d1a51b53231390033515dc152376a439941f SHA256 e2dd9574662113a159c6048bd2bb1898b7dc41f31622b4238f38cbf2c0d4c22b
 EBUILD sbcl-1.0.19.ebuild 7118 RMD160 0baadb6a0ce660a5d4e7f17b15024487369c66c8 SHA1 7b150ae87c7106c807159a121f7639877ebfc0c1 SHA256 e444c131e51b34b6e3f430b7b2b78316d386b7368d14c04af31a001b94f396c8
 EBUILD sbcl-1.0.26-r10.ebuild 6689 RMD160 34217f2ab325da0fe4eb73c6fd96cbe10e3d17a8 SHA1 9fd6bec4d88f061552a1e23537c0d1734b22c5ac SHA256 d93952bf767777fbb0fac341b1de9e242a1060aaa95a657b69a7b5514acdce6a
-MISC ChangeLog 45565 RMD160 46ccc91c44530cbe45dc3323765040f06705698f SHA1 ddce3a7c6e1e70922279bc48718b4064cae924c6 SHA256 c9ccdd230b624843beaa0211718d777843c6c826c751f1058fd9739d789e1a3f
+EBUILD sbcl-1.0.27-r10.ebuild 6627 RMD160 9aa7d40ebc6c2e7cb13ebd78d4b2e204e0ba516e SHA1 b68400200f42e18be72b1309aba4b9e7ee0150dd SHA256 1fc6a6f532d41a16934917f8b9abe4180e36e89277d704e29743f420b1ff16f2
+MISC ChangeLog 45680 RMD160 b93a44791c00a014fc44024d259948f66d0126fb SHA1 3737132d29bb59fc7b2c4949716f1edc555ccf4c SHA256 e15f399899497ba36268c459e69f86da29cd561e4ed87763b1fea17f5de863e4
 MISC metadata.xml 1192 RMD160 cc9ef1f835468d8901a7fac96ff183cffaa8448f SHA1 d628ab8da2e19ab42b6df9dcd1afc09e3efdcd05 SHA256 b5fb21d6b7020a9ebde8793cfb7209ee1db5c5d6ee0b1c8fd6c7b7e3a3db27b1
