@@ -1,21 +1,24 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.0.15.ebuild,v 1.3 2008/11/16 16:31:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.0.27-r10.ebuild,v 1.1 2009/04/15 23:12:34 hkbst Exp $
+
+EAPI=2
 
 inherit eutils flag-o-matic
 
 #same order as http://www.sbcl.org/platform-table.html
-BV_X86=1.0.12
-BV_AMD64=1.0.12
-BV_PPC=1.0
-BV_SPARC=0.9.17
+BV_X86=1.0.23
+BV_AMD64=1.0.25
+BV_PPC=1.0.23
+BV_SPARC=1.0.22
 BV_ALPHA=0.9.12
-BV_MIPS=1.0.12
-BV_MIPSEL=1.0.12
+BV_MIPS=1.0.23
+BV_MIPSEL=1.0.23
 
-BV_PPC_MACOS=0.9.15
-BV_X86_MACOS=0.9.16
-BV_X86_SOLARIS=0.9.14
+# for Mac OS X: 1.0.23 binaries are broken on Tiger (Bus Error)
+BV_PPC_MACOS=1.0.2
+BV_X86_MACOS=1.0.2
+BV_X86_SOLARIS=1.0.23
 
 
 DESCRIPTION="Steel Bank Common Lisp (SBCL) is an implementation of ANSI Common Lisp."
@@ -37,29 +40,24 @@ SRC_URI="mirror://sourceforge/sbcl/${P}-source.tar.bz2
 
 LICENSE="MIT"
 SLOT="0"
-
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE="ldb source +threads +unicode doc cobalt"
 
-IUSE="ldb source threads unicode doc cobalt"
-
-DEPEND="doc? ( sys-apps/texinfo media-gfx/graphviz )"
-
+DEPEND="doc? ( sys-apps/texinfo >=media-gfx/graphviz-2.20[png] )"
+RDEPEND="elibc_glibc? ( !prefix? ( >=sys-libs/glibc-2.3 || ( <sys-libs/glibc-2.6[nptl] >=sys-libs/glibc-2.6 ) ) )"
 PDEPEND="dev-lisp/gentoo-init"
 
 PROVIDE="virtual/commonlisp"
+
+#Disable warnings about executable stacks, as this won't be fixed soon, by
+#upstream
+QA_EXECSTACK="usr/bin/sbcl usr/lib/sbcl/src/runtime/sbcl usr/lib/sbcl/src/runtime/*.o"
 
 pkg_setup() {
 	if has_version sys-devel/gcc && built_with_use sys-devel/gcc hardened && gcc-config -c | grep -qv vanilla; then
 		eerror "So-called \"hardened\" compiler features are incompatible with SBCL. You"
 		eerror "must use gcc-config to select a profile with non-hardened features"
 		eerror "(the \"vanilla\" profile) and \"source /etc/profile\" before continuing."
-		die
-	fi
-	if use !prefix && (use x86 || use amd64) && has_version "<sys-libs/glibc-2.6" \
-		&& ! built_with_use sys-libs/glibc nptl; then
-		eerror "Building SBCL without NPTL support on at least x86 and amd64"
-		eerror "architectures is not a supported configuration in Gentoo.  Please"
-		eerror "refer to Bug #119016 for more information."
 		die
 	fi
 }
@@ -73,8 +71,6 @@ usep() {
 
 sbcl_feature() {
 	echo "$( [[ $1 == "true" ]] && echo "(enable $2)" || echo "(disable $2)")" >> "${CONFIG}"
-#	if [[ $1 == "true" ]];  then echo "(enable $2)"  >> "${CONFIG}"; fi
-#	if [[ $1 == "false" ]]; then echo "(disable $2)" >> "${CONFIG}"; fi
 }
 
 sbcl_apply_features() {
@@ -102,37 +98,37 @@ src_unpack() {
 	cd "${S}"
 
 	epatch "${FILESDIR}"/${PN}-1.0.6-solaris.patch
-	epatch "${FILESDIR}"/${PN}-version-asm.patch #216871
 #	epatch "${FILESDIR}/disable-tests-gentoo-${PV}.patch"
-	use source && sed 's%"$(build_root)%$(module).lisp "$(build_root)%' -i contrib/vanilla-module.mk
+	use source && sed 's%"$(BUILD_ROOT)%$(MODULE).lisp "$(BUILD_ROOT)%' -i contrib/vanilla-module.mk
 
 	sed "s,/lib,/$(get_libdir),g" -i "${S}/install.sh"
 	sed  "s,/usr/local/lib,${EPREFIX}/usr/$(get_libdir),g" -i "${S}/src/runtime/runtime.c" # #define SBCL_HOME ...
 	sed  "s,/etc/sbclrc,${EPREFIX}/etc/sbclrc,g" -i "${S}/src/code/toplevel.lisp" # change location of /etc/sbclrc ...
-
-	# customizing SBCL version as per
-	# http://sbcl.cvs.sourceforge.net/sbcl/sbcl/doc/PACKAGING-SBCL.txt?view=markup
-	echo -e ";;; Auto-generated by Gentoo\n\"${PVR}-gentoo\"" > "${S}/version.lisp-expr"
-
-	# applying customizations
-	sbcl_apply_features
 
 	find "${S}" -type f -name .cvsignore -print0 | xargs -0 rm -f
 	find "${S}" -depth -type d -name CVS -or -name .git -print0 | xargs -0 rm -rf
 	find "${S}" -type f -name \*.c -print0 | xargs -0 chmod 644
 }
 
+src_configure() {
+	# customizing SBCL version as per
+	# http://sbcl.cvs.sourceforge.net/sbcl/sbcl/doc/PACKAGING-SBCL.txt?view=markup
+	echo -e ";;; Auto-generated by Gentoo\n\"${PVR}-gentoo\"" > "${S}/version.lisp-expr"
+
+	# applying customizations
+	sbcl_apply_features
+}
+
 src_compile() {
 	local bindir="${WORKDIR}"/sbcl-binary
 
-	[[ $(ld --version 2>&1 | head -n1) == *GNU* ]] && \
 	append-ldflags -Wl,--no-as-needed # see Bug #132992
 
 	# clear the environment to get rid of non-ASCII strings, see bug 174702
 	# set HOME for paludis
 	env - HOME="${T}" \
 		PATH="${bindir}/src/runtime:${PATH}" SBCL_HOME="${bindir}/output" GNUMAKE=make ./make.sh \
-		"sbcl --sysinit /dev/null --userinit /dev/null	--disable-debugger --core ${bindir}/output/sbcl.core" \
+		"sbcl --no-sysinit --no-userinit --disable-debugger --core ${bindir}/output/sbcl.core" \
 		|| die "make failed"
 
 	# need to set HOME because libpango(used by graphviz) complains about it
@@ -191,16 +187,4 @@ EOF
 	echo "SBCL_HOME=${EPREFIX}/usr/$(get_libdir)/${PN}" > "${ENVD}"
 	echo "SBCL_SOURCE_ROOT=${EPREFIX}/usr/$(get_libdir)/${PN}/src" >> "${ENVD}"
 	doenvd "${ENVD}"
-
-#	impl-save-timestamp-hack sbcl
 }
-
-pkg_postinst() {
-	sleep 1
-	find "${EPREFIX}"/usr/$(get_libdir)/sbcl/ -type f -name '*.fasl' -exec touch -m {} ';'
-#	standard-impl-postinst sbcl
-}
-
-# pkg_postrm() {
-# 	standard-impl-postrm sbcl /usr/bin/sbcl
-# }
