@@ -1,6 +1,11 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.155 2009/03/20 16:23:47 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.156 2009/04/15 23:12:34 hkbst Exp $
+
+*sbcl-1.0.27-r10 (15 Apr 2009)
+
+  15 Apr 2009; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.27-r10.ebuild:
+  bump
 
   20 Mar 2009; Marijn Schouten <hkBst@gentoo.org> -sbcl-1.0.9.ebuild,
   -sbcl-1.0.10.ebuild, -sbcl-1.0.11-r1.ebuild, -sbcl-1.0.12.ebuild,
